fixed uneven spacing between Date and category

--- a/src/app/fyle/add-edit-expense/add-edit-expense.page.scss
+++ b/src/app/fyle/add-edit-expense/add-edit-expense.page.scss
@@ -271,6 +271,7 @@
   &--project-block {
     flex-grow: 1;
     margin-right: 26px;
+    margin-top: -13px;
   }
 
   &--primary-block {
